added remainning component html and css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Streamline your daily note-taking with NoteKeeper. Organise, access and enhance productivity with ease. Your go-to platform for managing your everyday notes>"
 
   <!--
-      -- favicon
+        -- favicon
   -->
 
 <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
@@ -146,7 +146,7 @@
 
     <div class="note-list" data-note-panel>
 
-        <div class-"card">
+        <!-- <div class-"card">
             <h3 class="card-title text-title-medium">Note Title</h3>
 
             <p class="card-text text-body-large">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -163,7 +163,7 @@
         
 
             <div class="state-layer"></div>
-        </div>
+        </div> -->
     </div>
 
 
@@ -229,11 +229,18 @@
     </div>
 </div>
 -->
-<!--
-<span class="tooltip text-body-small">Tooltip text</span>
--->
 
-<div class="empty-notes"></div>
+<!-- <span class="tooltip text-body-small">Tooltip text</span> -->
+
+
+
+
+<!-- <div class="empty-notes">
+    <span class="material-symbols-rounded" aria-hidden="true">note_stack</span>
+
+   <div class="text-headline-small">No notes</div>
+</div> -->
+
 </main>
 </body>
 </html>
