--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!--
      -- custom css link
 -->
-9
+
 <link rel="stylesheet" href="./src/css/style.css">
 
 <!--
@@ -116,7 +116,7 @@
     <div class="header">
 
         <div class="wrapper">
-            <p class="title text-title large" data-greeting>Good Morning</p>
+            <p class="title text-title large" data-greeting></p>
             <span class="text text-body-medium" data-current-date>Sat, Sep 22 2023</span>
 
         </div>
