added new feature

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notekeeper - Your Everyday Notes | Effortless Note Taking</title>
     <meta name = "title" content="Notekeeper - Your Everyday Notes | Effortless Note Taking">
-    <meta name="description" content="Streamline your daily note-taking with NoteKeeper. Organise, access and enhance productivity with ease. Your go-to platform for managing your everyday notes>"
+    <meta name="description" content="Streamline your daily note-taking with NoteKeeper. Organise, access and enhance productivity with ease. Your go-to platform for managing your everyday notes"/>
 
   <!--
         -- favicon
@@ -55,7 +55,7 @@
             class="logo-dark">
         </a>
 
-        <button class="menu-btn icon-btn large" aria-label="Close menu" data-sidebar-togglex>
+        <button class="menu-btn icon-btn large" aria-label="Close menu" data-sidebar-toggler>
             <span class="material-symbols-rounded" aria-hidden="true">close</span>
 
             <div class="state-layer"></div>
@@ -109,7 +109,7 @@
     </span>
 </header>
 
-<div class="overlay" data-sidebar-overlay data-sidebar-togglex></div>
+<div class="overlay" data-sidebar-overlay data-sidebar-toggler></div>
     
 <main class="main">
 
@@ -129,7 +129,7 @@
 
         </button>
 
-        <button class="menu-btn icon-btn large" aria-label="Open menu" data-sidebar-togglex>
+        <button class="menu-btn icon-btn large" aria-label="Open menu" data-sidebar-toggler>
             <span class="material-symbols-rounded" aria-hidden="true">menu</span>
 
             <div class="state-layer"></div>
