--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notekeeper - Your Everyday Notes | Effortless Note Taking</title>
-    <meta name = "title" content="Notekeeper - Your Everyday Notes | Effortless Note Taking">
-    <meta name="description" content="Streamline your daily note-taking with NoteKeeper. Organise, access and enhance productivity with ease. Your go-to platform for managing your everyday notes"/>
+    <meta name="title" content="Notekeeper - Your Everyday Notes | Effortless Note Taking">
+
+      <meta name="description" content="Streamline your daily note-taking with NoteKeeper. Organise, access and enhance productivity with ease. Your go-to platform for managing your everyday notes"/>
 
   <!--
         -- favicon
@@ -75,7 +76,8 @@
 
         <h2 class="text-title-small">NOTEBOOKS</h2>
         
-        <button class="icon-btn small" data tooltip="Create new notebook" aria-label="Create new notebook" data-add-notebook>
+        <button class="icon-btn small" data-tooltip="Create new notebook" aria-label="Create new notebook" data-add-notebook>
+
             <span class="material-symbols-rounded" aria-hidden="true">add</span>
 
             <div class="state-layer"></div>
@@ -104,8 +106,8 @@
     </nav>
 
     <div class="cp-info"></div>
-    <span class="text-label-large">Copyright 2023 
-        <strong>codewithsadee</strong>
+    <span class="text-label-large">
+        <strong></strong>
     </span>
 </header>
 
